# nexus

./: .gitignore  AGENCY.md  README.md  index.html  install.ps1  install.sh  nexus-headless  nexus_web_state.json  package-lock.json  package.json  project.md  run.sh  tailwind.config.js  test-panel.js  vite.config.ts
.github/workflows/: release.yml
.nexus/: agency-agents.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/workflows/: release.md  workflow-registry.json
docs/: agent-mcp-skills-guide.md  building-arm64.md  building-windows.md  project-switch-freeze-fix.md  terminal-rendering-fix.md  todo.md
docs/release_notes/: v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md
node-compile-cache/v25.9.0-x64-392347a2-1000/: 00279342  010ca46c  01b7386d  022c8d76  02ccd9ce  032e32c2  04085c5d  046957ae  04d9d011  052b4f98  057f0d84  059f2378  05fec450  07c2456e  07cf3f8a  084167c6  0873de5b  091ce0e2  09275b59  094e6b9e  09615a35  09800fe0  09dde953  0a1fa128  0a70f056  0b2855c5  0b712baf  0c5232a3  0d04415e  0d9f97b3  0dd9c48d  0f063766  0f0a7988  0f0c8433  0f68cbe2  0fc51e1f  0fd0b3f1  0fdd5abd  0fef87ad  10123dee  (+513 more)
releases/: nexus-headless-linux-x86_64
scripts/: bootstrap-spec-kit.sh  package-release.ps1  package-release.sh
src/: App.tsx  mobile.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pty.rs  server.rs  state.rs  ws_server.rs
src/components/AgentBar/: AgentBar.tsx
src/components/GitDiffPanel/: GitDiffPanel.tsx
src/components/Kanban/: KanbanBoard.tsx
src/components/PaneGrid/: Pane.tsx  PaneGrid.tsx  TerminalView.tsx
src/components/ProjectDirectoryPanel/: ProjectDirectoryPanel.tsx
src/components/ProjectTabs/: ProjectTabs.tsx
src/components/ResourceMonitorPanel/: ResourceMonitorPanel.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/StatusBar/: StatusBar.tsx
src/constants/: agents.ts  keybindings.ts  mcpPresets.ts
src/lib/: api.ts  directWriter.ts  imageDataUrl.ts  layout.ts  persistence.ts  projectMcpSync.ts
src/store/: kanbanStore.ts  projectStore.ts  sessionStore.ts
src/types/: index.ts
(+6 files in other folders)
