[package]
name = "nexus"
version = "0.1.1"
description = "Nexus multi-project AI agent workspace"
authors = ["abhay"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
which = "6"
nanoid = "0.4"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.38.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
