[package]
name = "nexus"
version = "0.1.8"
description = "Nexus multi-project AI agent workspace"
authors = ["abhay"]
edition = "2021"

[[bin]]
name = "nexus"
path = "src/main.rs"

[[bin]]
name = "nexus-headless"
path = "src/bin/server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
nanoid = "0.4"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.38.4"
tiny_http = "0.12"
mime_guess = "2"
tokio-tungstenite = "0.24"
futures = "0.3"
local-ip-address = "0.6"
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
